// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/layout/demo/basic.md correctly 1`] = `
<div>
  <div
    class="ant-layout"
  >
    <div
      class="ant-layout-header"
    >
      Header
    </div>
    <div
      class="ant-layout-content"
    >
      Content
    </div>
    <div
      class="ant-layout-footer"
    >
      Footer
    </div>
  </div>
  <div
    class="ant-layout"
  >
    <div
      class="ant-layout-header"
    >
      Header
    </div>
    <div
      class="ant-layout"
    >
      <div
        class="ant-layout-sider ant-layout-sider-dark"
        style="flex:0 0 200px;max-width:200px;min-width:200px;width:200px"
      >
        <div
          class="ant-layout-sider-children"
        >
          Sider
        </div>
      </div>
      <div
        class="ant-layout-content"
      >
        Content
      </div>
    </div>
    <div
      class="ant-layout-footer"
    >
      Footer
    </div>
  </div>
  <div
    class="ant-layout"
  >
    <div
      class="ant-layout-header"
    >
      Header
    </div>
    <div
      class="ant-layout"
    >
      <div
        class="ant-layout-content"
      >
        Content
      </div>
      <div
        class="ant-layout-sider ant-layout-sider-dark"
        style="flex:0 0 200px;max-width:200px;min-width:200px;width:200px"
      >
        <div
          class="ant-layout-sider-children"
        >
          Sider
        </div>
      </div>
    </div>
    <div
      class="ant-layout-footer"
    >
      Footer
    </div>
  </div>
  <div
    class="ant-layout"
  >
    <div
      class="ant-layout-sider ant-layout-sider-dark"
      style="flex:0 0 200px;max-width:200px;min-width:200px;width:200px"
    >
      <div
        class="ant-layout-sider-children"
      >
        Sider
      </div>
    </div>
    <div
      class="ant-layout"
    >
      <div
        class="ant-layout-header"
      >
        Header
      </div>
      <div
        class="ant-layout-content"
      >
        Content
      </div>
      <div
        class="ant-layout-footer"
      >
        Footer
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ./components/layout/demo/custom-trigger.md correctly 1`] = `
<div
  class="ant-layout"
>
  <div
    class="ant-layout-sider ant-layout-sider-dark"
    style="flex:0 0 200px;max-width:200px;min-width:200px;width:200px"
  >
    <div
      class="ant-layout-sider-children"
    >
      <div
        class="logo"
      />
      <ul
        class="ant-menu ant-menu-dark ant-menu-root ant-menu-inline"
        role="menu"
      >
        <li
          class="ant-menu-item ant-menu-item-selected"
          role="menuitem"
          style="padding-left:24px"
        >
          <i
            class="anticon anticon-user"
          />
          <span>
            nav 1
          </span>
        </li>
        <li
          class="ant-menu-item"
          role="menuitem"
          style="padding-left:24px"
        >
          <i
            class="anticon anticon-video-camera"
          />
          <span>
            nav 2
          </span>
        </li>
        <li
          class="ant-menu-item"
          role="menuitem"
          style="padding-left:24px"
        >
          <i
            class="anticon anticon-upload"
          />
          <span>
            nav 3
          </span>
        </li>
      </ul>
    </div>
  </div>
  <div
    class="ant-layout"
  >
    <div
      class="ant-layout-header"
      style="background:#fff;padding:0"
    >
      <i
        class="anticon anticon-menu-fold trigger"
      />
    </div>
    <div
      class="ant-layout-content"
      style="margin:24px 16px;padding:24px;background:#fff;min-height:280px"
    >
      Content
    </div>
  </div>
</div>
`;

exports[`renders ./components/layout/demo/fixed.md correctly 1`] = `
<div
  class="ant-layout"
>
  <div
    class="ant-layout-header"
    style="position:fixed;z-index:1;width:100%"
  >
    <div
      class="logo"
    />
    <ul
      class="ant-menu ant-menu-dark ant-menu-root ant-menu-horizontal"
      role="menu"
      style="line-height:64px"
    >
      <li
        class="ant-menu-submenu ant-menu-submenu-horizontal ant-menu-overflowed-submenu"
        role="menuitem"
        style="line-height:64px;display:none"
      >
        <div
          aria-expanded="false"
          aria-haspopup="true"
          class="ant-menu-submenu-title"
        >
          <span>
            ···
          </span>
          <i
            class="ant-menu-submenu-arrow"
          />
        </div>
      </li>
      <li
        class="ant-menu-item"
        role="menuitem"
      >
        nav 1
      </li>
      <li
        class="ant-menu-submenu ant-menu-submenu-horizontal ant-menu-overflowed-submenu"
        role="menuitem"
        style="line-height:64px;display:none"
      >
        <div
          aria-expanded="false"
          aria-haspopup="true"
          class="ant-menu-submenu-title"
        >
          <span>
            ···
          </span>
          <i
            class="ant-menu-submenu-arrow"
          />
        </div>
      </li>
      <li
        class="ant-menu-item ant-menu-item-selected"
        role="menuitem"
      >
        nav 2
      </li>
      <li
        class="ant-menu-submenu ant-menu-submenu-horizontal ant-menu-overflowed-submenu"
        role="menuitem"
        style="line-height:64px;display:none"
      >
        <div
          aria-expanded="false"
          aria-haspopup="true"
          class="ant-menu-submenu-title"
        >
          <span>
            ···
          </span>
          <i
            class="ant-menu-submenu-arrow"
          />
        </div>
      </li>
      <li
        class="ant-menu-item"
        role="menuitem"
      >
        nav 3
      </li>
      <li
        class="ant-menu-submenu ant-menu-submenu-horizontal ant-menu-overflowed-submenu"
        role="menuitem"
        style="line-height:64px;visibility:hidden"
      >
        <div
          aria-expanded="false"
          aria-haspopup="true"
          class="ant-menu-submenu-title"
        >
          <span>
            ···
          </span>
          <i
            class="ant-menu-submenu-arrow"
          />
        </div>
      </li>
    </ul>
  </div>
  <div
    class="ant-layout-content"
    style="padding:0 50px;margin-top:64px"
  >
    <div
      class="ant-breadcrumb"
      style="margin:16px 0"
    >
      <span>
        <span
          class="ant-breadcrumb-link"
        >
          Home
        </span>
        <span
          class="ant-breadcrumb-separator"
        >
          /
        </span>
      </span>
      <span>
        <span
          class="ant-breadcrumb-link"
        >
          List
        </span>
        <span
          class="ant-breadcrumb-separator"
        >
          /
        </span>
      </span>
      <span>
        <span
          class="ant-breadcrumb-link"
        >
          App
        </span>
        <span
          class="ant-breadcrumb-separator"
        >
          /
        </span>
      </span>
    </div>
    <div
      style="background:#fff;padding:24px;min-height:380px"
    >
      Content
    </div>
  </div>
  <div
    class="ant-layout-footer"
    style="text-align:center"
  >
    Ant Design ©2018 Created by Ant UED
  </div>
</div>
`;

exports[`renders ./components/layout/demo/fixed-sider.md correctly 1`] = `
<div
  class="ant-layout"
>
  <div
    class="ant-layout-sider ant-layout-sider-dark"
    style="overflow:auto;height:100vh;position:fixed;left:0;flex:0 0 200px;max-width:200px;min-width:200px;width:200px"
  >
    <div
      class="ant-layout-sider-children"
    >
      <div
        class="logo"
      />
      <ul
        class="ant-menu ant-menu-dark ant-menu-root ant-menu-inline"
        role="menu"
      >
        <li
          class="ant-menu-item"
          role="menuitem"
          style="padding-left:24px"
        >
          <i
            class="anticon anticon-user"
          />
          <span
            class="nav-text"
          >
            nav 1
          </span>
        </li>
        <li
          class="ant-menu-item"
          role="menuitem"
          style="padding-left:24px"
        >
          <i
            class="anticon anticon-video-camera"
          />
          <span
            class="nav-text"
          >
            nav 2
          </span>
        </li>
        <li
          class="ant-menu-item"
          role="menuitem"
          style="padding-left:24px"
        >
          <i
            class="anticon anticon-upload"
          />
          <span
            class="nav-text"
          >
            nav 3
          </span>
        </li>
        <li
          class="ant-menu-item ant-menu-item-selected"
          role="menuitem"
          style="padding-left:24px"
        >
          <i
            class="anticon anticon-bar-chart"
          />
          <span
            class="nav-text"
          >
            nav 4
          </span>
        </li>
        <li
          class="ant-menu-item"
          role="menuitem"
          style="padding-left:24px"
        >
          <i
            class="anticon anticon-cloud-o"
          >
            <svg
              aria-hidden="true"
              class=""
              data-icon="cloud"
              fill="currentColor"
              height="1em"
              viewBox="0 0 1024 1024"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M811.4 418.7C765.6 297.9 648.9 212 512.2 212S258.8 297.8 213 418.6C127.3 441.1 64 519.1 64 612c0 110.5 89.5 200 199.9 200h496.2C870.5 812 960 722.5 960 612c0-92.7-63.1-170.7-148.6-193.3zm36.3 281c-23.4 23.4-54.5 36.3-87.6 36.3H263.9c-33.1 0-64.2-12.9-87.6-36.3-23.4-23.4-36.3-54.6-36.3-87.7 0-28 9.1-54.3 26.2-76.3 16.7-21.3 40.2-36.8 66.1-43.7l37.9-9.9 13.9-36.6c8.6-22.8 20.6-44.1 35.7-63.4 14.9-19.2 32.6-35.9 52.4-49.9 41.1-28.9 89.5-44.2 140-44.2s98.9 15.3 140 44.2c19.9 14 37.5 30.8 52.4 49.9 15.1 19.3 27.1 40.7 35.7 63.4l13.8 36.5 37.8 10c54.3 14.5 92.1 63.8 92.1 120 0 33.1-12.9 64.3-36.3 87.7z"
              />
            </svg>
          </i>
          <span
            class="nav-text"
          >
            nav 5
          </span>
        </li>
        <li
          class="ant-menu-item"
          role="menuitem"
          style="padding-left:24px"
        >
          <i
            class="anticon anticon-appstore-o"
          >
            <svg
              aria-hidden="true"
              class=""
              data-icon="appstore"
              fill="currentColor"
              height="1em"
              viewBox="0 0 1024 1024"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M464 144H160c-8.8 0-16 7.2-16 16v304c0 8.8 7.2 16 16 16h304c8.8 0 16-7.2 16-16V160c0-8.8-7.2-16-16-16zm-52 268H212V212h200v200zm452-268H560c-8.8 0-16 7.2-16 16v304c0 8.8 7.2 16 16 16h304c8.8 0 16-7.2 16-16V160c0-8.8-7.2-16-16-16zm-52 268H612V212h200v200zM464 544H160c-8.8 0-16 7.2-16 16v304c0 8.8 7.2 16 16 16h304c8.8 0 16-7.2 16-16V560c0-8.8-7.2-16-16-16zm-52 268H212V612h200v200zm452-268H560c-8.8 0-16 7.2-16 16v304c0 8.8 7.2 16 16 16h304c8.8 0 16-7.2 16-16V560c0-8.8-7.2-16-16-16zm-52 268H612V612h200v200z"
              />
            </svg>
          </i>
          <span
            class="nav-text"
          >
            nav 6
          </span>
        </li>
        <li
          class="ant-menu-item"
          role="menuitem"
          style="padding-left:24px"
        >
          <i
            class="anticon anticon-team"
          />
          <span
            class="nav-text"
          >
            nav 7
          </span>
        </li>
        <li
          class="ant-menu-item"
          role="menuitem"
          style="padding-left:24px"
        >
          <i
            class="anticon anticon-shop"
          />
          <span
            class="nav-text"
          >
            nav 8
          </span>
        </li>
      </ul>
    </div>
  </div>
  <div
    class="ant-layout"
    style="margin-left:200px"
  >
    <div
      class="ant-layout-header"
      style="background:#fff;padding:0"
    />
    <div
      class="ant-layout-content"
      style="margin:24px 16px 0;overflow:initial"
    >
      <div
        style="padding:24px;background:#fff;text-align:center"
      >
        ...
        <br />
        Really
        <br />
        ...
        <br />
        ...
        <br />
        ...
        <br />
        long
        <br />
        ...
        <br />
        ...
        <br />
        ...
        <br />
        ...
        <br />
        ...
        <br />
        ...
        <br />
        ...
        <br />
        ...
        <br />
        ...
        <br />
        ...
        <br />
        ...
        <br />
        ...
        <br />
        ...
        <br />
        ...
        <br />
        ...
        <br />
        ...
        <br />
        ...
        <br />
        ...
        <br />
        ...
        <br />
        ...
        <br />
        ...
        <br />
        ...
        <br />
        ...
        <br />
        ...
        <br />
        ...
        <br />
        ...
        <br />
        ...
        <br />
        ...
        <br />
        ...
        <br />
        ...
        <br />
        ...
        <br />
        ...
        <br />
        ...
        <br />
        ...
        <br />
        ...
        <br />
        ...
        <br />
        ...
        <br />
        ...
        <br />
        ...
        <br />
        ...
        <br />
        ...
        <br />
        content
      </div>
    </div>
    <div
      class="ant-layout-footer"
      style="text-align:center"
    >
      Ant Design ©2018 Created by Ant UED
    </div>
  </div>
</div>
`;

exports[`renders ./components/layout/demo/responsive.md correctly 1`] = `
<div
  class="ant-layout"
>
  <div
    class="ant-layout-sider ant-layout-sider-dark"
    style="flex:0 0 200px;max-width:200px;min-width:200px;width:200px"
  >
    <div
      class="ant-layout-sider-children"
    >
      <div
        class="logo"
      />
      <ul
        class="ant-menu ant-menu-dark ant-menu-root ant-menu-inline"
        role="menu"
      >
        <li
          class="ant-menu-item"
          role="menuitem"
          style="padding-left:24px"
        >
          <i
            class="anticon anticon-user"
          />
          <span
            class="nav-text"
          >
            nav 1
          </span>
        </li>
        <li
          class="ant-menu-item"
          role="menuitem"
          style="padding-left:24px"
        >
          <i
            class="anticon anticon-video-camera"
          />
          <span
            class="nav-text"
          >
            nav 2
          </span>
        </li>
        <li
          class="ant-menu-item"
          role="menuitem"
          style="padding-left:24px"
        >
          <i
            class="anticon anticon-upload"
          />
          <span
            class="nav-text"
          >
            nav 3
          </span>
        </li>
        <li
          class="ant-menu-item ant-menu-item-selected"
          role="menuitem"
          style="padding-left:24px"
        >
          <i
            class="anticon anticon-user"
          />
          <span
            class="nav-text"
          >
            nav 4
          </span>
        </li>
      </ul>
    </div>
  </div>
  <div
    class="ant-layout"
  >
    <div
      class="ant-layout-header"
      style="background:#fff;padding:0"
    />
    <div
      class="ant-layout-content"
      style="margin:24px 16px 0"
    >
      <div
        style="padding:24px;background:#fff;min-height:360px"
      >
        content
      </div>
    </div>
    <div
      class="ant-layout-footer"
      style="text-align:center"
    >
      Ant Design ©2018 Created by Ant UED
    </div>
  </div>
</div>
`;

exports[`renders ./components/layout/demo/side.md correctly 1`] = `
<div
  class="ant-layout"
  style="min-height:100vh"
>
  <div
    class="ant-layout-sider ant-layout-sider-dark ant-layout-sider-has-trigger"
    style="flex:0 0 200px;max-width:200px;min-width:200px;width:200px"
  >
    <div
      class="ant-layout-sider-children"
    >
      <div
        class="logo"
      />
      <ul
        class="ant-menu ant-menu-dark ant-menu-root ant-menu-inline"
        role="menu"
      >
        <li
          class="ant-menu-item ant-menu-item-selected"
          role="menuitem"
          style="padding-left:24px"
        >
          <i
            class="anticon anticon-pie-chart"
          />
          <span>
            Option 1
          </span>
        </li>
        <li
          class="ant-menu-item"
          role="menuitem"
          style="padding-left:24px"
        >
          <i
            class="anticon anticon-desktop"
          />
          <span>
            Option 2
          </span>
        </li>
        <li
          class="ant-menu-submenu ant-menu-submenu-inline"
          role="menuitem"
        >
          <div
            aria-expanded="false"
            aria-haspopup="true"
            class="ant-menu-submenu-title"
            style="padding-left:24px"
          >
            <span>
              <i
                class="anticon anticon-user"
              />
              <span>
                User
              </span>
            </span>
            <i
              class="ant-menu-submenu-arrow"
            />
          </div>
          <div />
        </li>
        <li
          class="ant-menu-submenu ant-menu-submenu-inline"
          role="menuitem"
        >
          <div
            aria-expanded="false"
            aria-haspopup="true"
            class="ant-menu-submenu-title"
            style="padding-left:24px"
          >
            <span>
              <i
                class="anticon anticon-team"
              />
              <span>
                Team
              </span>
            </span>
            <i
              class="ant-menu-submenu-arrow"
            />
          </div>
          <div />
        </li>
        <li
          class="ant-menu-item"
          role="menuitem"
          style="padding-left:24px"
        >
          <i
            class="anticon anticon-file"
          />
          <span>
            File
          </span>
        </li>
      </ul>
    </div>
    <div
      class="ant-layout-sider-trigger"
      style="width:200px"
    >
      <i
        class="anticon anticon-left"
      />
    </div>
  </div>
  <div
    class="ant-layout"
  >
    <div
      class="ant-layout-header"
      style="background:#fff;padding:0"
    />
    <div
      class="ant-layout-content"
      style="margin:0 16px"
    >
      <div
        class="ant-breadcrumb"
        style="margin:16px 0"
      >
        <span>
          <span
            class="ant-breadcrumb-link"
          >
            User
          </span>
          <span
            class="ant-breadcrumb-separator"
          >
            /
          </span>
        </span>
        <span>
          <span
            class="ant-breadcrumb-link"
          >
            Bill
          </span>
          <span
            class="ant-breadcrumb-separator"
          >
            /
          </span>
        </span>
      </div>
      <div
        style="padding:24px;background:#fff;min-height:360px"
      >
        Bill is a cat.
      </div>
    </div>
    <div
      class="ant-layout-footer"
      style="text-align:center"
    >
      Ant Design ©2018 Created by Ant UED
    </div>
  </div>
</div>
`;

exports[`renders ./components/layout/demo/top.md correctly 1`] = `
<div
  class="layout ant-layout"
>
  <div
    class="ant-layout-header"
  >
    <div
      class="logo"
    />
    <ul
      class="ant-menu ant-menu-dark ant-menu-root ant-menu-horizontal"
      role="menu"
      style="line-height:64px"
    >
      <li
        class="ant-menu-submenu ant-menu-submenu-horizontal ant-menu-overflowed-submenu"
        role="menuitem"
        style="line-height:64px;display:none"
      >
        <div
          aria-expanded="false"
          aria-haspopup="true"
          class="ant-menu-submenu-title"
        >
          <span>
            ···
          </span>
          <i
            class="ant-menu-submenu-arrow"
          />
        </div>
      </li>
      <li
        class="ant-menu-item"
        role="menuitem"
      >
        nav 1
      </li>
      <li
        class="ant-menu-submenu ant-menu-submenu-horizontal ant-menu-overflowed-submenu"
        role="menuitem"
        style="line-height:64px;display:none"
      >
        <div
          aria-expanded="false"
          aria-haspopup="true"
          class="ant-menu-submenu-title"
        >
          <span>
            ···
          </span>
          <i
            class="ant-menu-submenu-arrow"
          />
        </div>
      </li>
      <li
        class="ant-menu-item ant-menu-item-selected"
        role="menuitem"
      >
        nav 2
      </li>
      <li
        class="ant-menu-submenu ant-menu-submenu-horizontal ant-menu-overflowed-submenu"
        role="menuitem"
        style="line-height:64px;display:none"
      >
        <div
          aria-expanded="false"
          aria-haspopup="true"
          class="ant-menu-submenu-title"
        >
          <span>
            ···
          </span>
          <i
            class="ant-menu-submenu-arrow"
          />
        </div>
      </li>
      <li
        class="ant-menu-item"
        role="menuitem"
      >
        nav 3
      </li>
      <li
        class="ant-menu-submenu ant-menu-submenu-horizontal ant-menu-overflowed-submenu"
        role="menuitem"
        style="line-height:64px;visibility:hidden"
      >
        <div
          aria-expanded="false"
          aria-haspopup="true"
          class="ant-menu-submenu-title"
        >
          <span>
            ···
          </span>
          <i
            class="ant-menu-submenu-arrow"
          />
        </div>
      </li>
    </ul>
  </div>
  <div
    class="ant-layout-content"
    style="padding:0 50px"
  >
    <div
      class="ant-breadcrumb"
      style="margin:16px 0"
    >
      <span>
        <span
          class="ant-breadcrumb-link"
        >
          Home
        </span>
        <span
          class="ant-breadcrumb-separator"
        >
          /
        </span>
      </span>
      <span>
        <span
          class="ant-breadcrumb-link"
        >
          List
        </span>
        <span
          class="ant-breadcrumb-separator"
        >
          /
        </span>
      </span>
      <span>
        <span
          class="ant-breadcrumb-link"
        >
          App
        </span>
        <span
          class="ant-breadcrumb-separator"
        >
          /
        </span>
      </span>
    </div>
    <div
      style="background:#fff;padding:24px;min-height:280px"
    >
      Content
    </div>
  </div>
  <div
    class="ant-layout-footer"
    style="text-align:center"
  >
    Ant Design ©2018 Created by Ant UED
  </div>
</div>
`;

exports[`renders ./components/layout/demo/top-side.md correctly 1`] = `
<div
  class="ant-layout"
>
  <div
    class="header ant-layout-header"
  >
    <div
      class="logo"
    />
    <ul
      class="ant-menu ant-menu-dark ant-menu-root ant-menu-horizontal"
      role="menu"
      style="line-height:64px"
    >
      <li
        class="ant-menu-submenu ant-menu-submenu-horizontal ant-menu-overflowed-submenu"
        role="menuitem"
        style="line-height:64px;display:none"
      >
        <div
          aria-expanded="false"
          aria-haspopup="true"
          class="ant-menu-submenu-title"
        >
          <span>
            ···
          </span>
          <i
            class="ant-menu-submenu-arrow"
          />
        </div>
      </li>
      <li
        class="ant-menu-item"
        role="menuitem"
      >
        nav 1
      </li>
      <li
        class="ant-menu-submenu ant-menu-submenu-horizontal ant-menu-overflowed-submenu"
        role="menuitem"
        style="line-height:64px;display:none"
      >
        <div
          aria-expanded="false"
          aria-haspopup="true"
          class="ant-menu-submenu-title"
        >
          <span>
            ···
          </span>
          <i
            class="ant-menu-submenu-arrow"
          />
        </div>
      </li>
      <li
        class="ant-menu-item ant-menu-item-selected"
        role="menuitem"
      >
        nav 2
      </li>
      <li
        class="ant-menu-submenu ant-menu-submenu-horizontal ant-menu-overflowed-submenu"
        role="menuitem"
        style="line-height:64px;display:none"
      >
        <div
          aria-expanded="false"
          aria-haspopup="true"
          class="ant-menu-submenu-title"
        >
          <span>
            ···
          </span>
          <i
            class="ant-menu-submenu-arrow"
          />
        </div>
      </li>
      <li
        class="ant-menu-item"
        role="menuitem"
      >
        nav 3
      </li>
      <li
        class="ant-menu-submenu ant-menu-submenu-horizontal ant-menu-overflowed-submenu"
        role="menuitem"
        style="line-height:64px;visibility:hidden"
      >
        <div
          aria-expanded="false"
          aria-haspopup="true"
          class="ant-menu-submenu-title"
        >
          <span>
            ···
          </span>
          <i
            class="ant-menu-submenu-arrow"
          />
        </div>
      </li>
    </ul>
  </div>
  <div
    class="ant-layout-content"
    style="padding:0 50px"
  >
    <div
      class="ant-breadcrumb"
      style="margin:16px 0"
    >
      <span>
        <span
          class="ant-breadcrumb-link"
        >
          Home
        </span>
        <span
          class="ant-breadcrumb-separator"
        >
          /
        </span>
      </span>
      <span>
        <span
          class="ant-breadcrumb-link"
        >
          List
        </span>
        <span
          class="ant-breadcrumb-separator"
        >
          /
        </span>
      </span>
      <span>
        <span
          class="ant-breadcrumb-link"
        >
          App
        </span>
        <span
          class="ant-breadcrumb-separator"
        >
          /
        </span>
      </span>
    </div>
    <div
      class="ant-layout"
      style="padding:24px 0;background:#fff"
    >
      <div
        class="ant-layout-sider ant-layout-sider-dark"
        style="background:#fff;flex:0 0 200px;max-width:200px;min-width:200px;width:200px"
      >
        <div
          class="ant-layout-sider-children"
        >
          <ul
            class="ant-menu ant-menu-light ant-menu-root ant-menu-inline"
            role="menu"
            style="height:100%"
          >
            <li
              class="ant-menu-submenu ant-menu-submenu-inline ant-menu-submenu-open ant-menu-submenu-selected"
              role="menuitem"
            >
              <div
                aria-expanded="true"
                aria-haspopup="true"
                aria-owns="sub1$Menu"
                class="ant-menu-submenu-title"
                style="padding-left:24px"
              >
                <span>
                  <i
                    class="anticon anticon-user"
                  />
                  subnav 1
                </span>
                <i
                  class="ant-menu-submenu-arrow"
                />
              </div>
              <ul
                class="ant-menu  ant-menu-sub ant-menu-inline"
                id="sub1$Menu"
                role="menu"
              >
                <li
                  class="ant-menu-item ant-menu-item-selected"
                  role="menuitem"
                  style="padding-left:48px"
                >
                  option1
                </li>
                <li
                  class="ant-menu-item"
                  role="menuitem"
                  style="padding-left:48px"
                >
                  option2
                </li>
                <li
                  class="ant-menu-item"
                  role="menuitem"
                  style="padding-left:48px"
                >
                  option3
                </li>
                <li
                  class="ant-menu-item"
                  role="menuitem"
                  style="padding-left:48px"
                >
                  option4
                </li>
              </ul>
            </li>
            <li
              class="ant-menu-submenu ant-menu-submenu-inline"
              role="menuitem"
            >
              <div
                aria-expanded="false"
                aria-haspopup="true"
                class="ant-menu-submenu-title"
                style="padding-left:24px"
              >
                <span>
                  <i
                    class="anticon anticon-laptop"
                  />
                  subnav 2
                </span>
                <i
                  class="ant-menu-submenu-arrow"
                />
              </div>
              <div />
            </li>
            <li
              class="ant-menu-submenu ant-menu-submenu-inline"
              role="menuitem"
            >
              <div
                aria-expanded="false"
                aria-haspopup="true"
                class="ant-menu-submenu-title"
                style="padding-left:24px"
              >
                <span>
                  <i
                    class="anticon anticon-notification"
                  />
                  subnav 3
                </span>
                <i
                  class="ant-menu-submenu-arrow"
                />
              </div>
              <div />
            </li>
          </ul>
        </div>
      </div>
      <div
        class="ant-layout-content"
        style="padding:0 24px;min-height:280px"
      >
        Content
      </div>
    </div>
  </div>
  <div
    class="ant-layout-footer"
    style="text-align:center"
  >
    Ant Design ©2018 Created by Ant UED
  </div>
</div>
`;

exports[`renders ./components/layout/demo/top-side-2.md correctly 1`] = `
<div
  class="ant-layout"
>
  <div
    class="header ant-layout-header"
  >
    <div
      class="logo"
    />
    <ul
      class="ant-menu ant-menu-dark ant-menu-root ant-menu-horizontal"
      role="menu"
      style="line-height:64px"
    >
      <li
        class="ant-menu-submenu ant-menu-submenu-horizontal ant-menu-overflowed-submenu"
        role="menuitem"
        style="line-height:64px;display:none"
      >
        <div
          aria-expanded="false"
          aria-haspopup="true"
          class="ant-menu-submenu-title"
        >
          <span>
            ···
          </span>
          <i
            class="ant-menu-submenu-arrow"
          />
        </div>
      </li>
      <li
        class="ant-menu-item"
        role="menuitem"
      >
        nav 1
      </li>
      <li
        class="ant-menu-submenu ant-menu-submenu-horizontal ant-menu-overflowed-submenu"
        role="menuitem"
        style="line-height:64px;display:none"
      >
        <div
          aria-expanded="false"
          aria-haspopup="true"
          class="ant-menu-submenu-title"
        >
          <span>
            ···
          </span>
          <i
            class="ant-menu-submenu-arrow"
          />
        </div>
      </li>
      <li
        class="ant-menu-item ant-menu-item-selected"
        role="menuitem"
      >
        nav 2
      </li>
      <li
        class="ant-menu-submenu ant-menu-submenu-horizontal ant-menu-overflowed-submenu"
        role="menuitem"
        style="line-height:64px;display:none"
      >
        <div
          aria-expanded="false"
          aria-haspopup="true"
          class="ant-menu-submenu-title"
        >
          <span>
            ···
          </span>
          <i
            class="ant-menu-submenu-arrow"
          />
        </div>
      </li>
      <li
        class="ant-menu-item"
        role="menuitem"
      >
        nav 3
      </li>
      <li
        class="ant-menu-submenu ant-menu-submenu-horizontal ant-menu-overflowed-submenu"
        role="menuitem"
        style="line-height:64px;visibility:hidden"
      >
        <div
          aria-expanded="false"
          aria-haspopup="true"
          class="ant-menu-submenu-title"
        >
          <span>
            ···
          </span>
          <i
            class="ant-menu-submenu-arrow"
          />
        </div>
      </li>
    </ul>
  </div>
  <div
    class="ant-layout"
  >
    <div
      class="ant-layout-sider ant-layout-sider-dark"
      style="background:#fff;flex:0 0 200px;max-width:200px;min-width:200px;width:200px"
    >
      <div
        class="ant-layout-sider-children"
      >
        <ul
          class="ant-menu ant-menu-light ant-menu-root ant-menu-inline"
          role="menu"
          style="height:100%;border-right:0"
        >
          <li
            class="ant-menu-submenu ant-menu-submenu-inline ant-menu-submenu-open ant-menu-submenu-selected"
            role="menuitem"
          >
            <div
              aria-expanded="true"
              aria-haspopup="true"
              aria-owns="sub1$Menu"
              class="ant-menu-submenu-title"
              style="padding-left:24px"
            >
              <span>
                <i
                  class="anticon anticon-user"
                />
                subnav 1
              </span>
              <i
                class="ant-menu-submenu-arrow"
              />
            </div>
            <ul
              class="ant-menu  ant-menu-sub ant-menu-inline"
              id="sub1$Menu"
              role="menu"
            >
              <li
                class="ant-menu-item ant-menu-item-selected"
                role="menuitem"
                style="padding-left:48px"
              >
                option1
              </li>
              <li
                class="ant-menu-item"
                role="menuitem"
                style="padding-left:48px"
              >
                option2
              </li>
              <li
                class="ant-menu-item"
                role="menuitem"
                style="padding-left:48px"
              >
                option3
              </li>
              <li
                class="ant-menu-item"
                role="menuitem"
                style="padding-left:48px"
              >
                option4
              </li>
            </ul>
          </li>
          <li
            class="ant-menu-submenu ant-menu-submenu-inline"
            role="menuitem"
          >
            <div
              aria-expanded="false"
              aria-haspopup="true"
              class="ant-menu-submenu-title"
              style="padding-left:24px"
            >
              <span>
                <i
                  class="anticon anticon-laptop"
                />
                subnav 2
              </span>
              <i
                class="ant-menu-submenu-arrow"
              />
            </div>
            <div />
          </li>
          <li
            class="ant-menu-submenu ant-menu-submenu-inline"
            role="menuitem"
          >
            <div
              aria-expanded="false"
              aria-haspopup="true"
              class="ant-menu-submenu-title"
              style="padding-left:24px"
            >
              <span>
                <i
                  class="anticon anticon-notification"
                />
                subnav 3
              </span>
              <i
                class="ant-menu-submenu-arrow"
              />
            </div>
            <div />
          </li>
        </ul>
      </div>
    </div>
    <div
      class="ant-layout"
      style="padding:0 24px 24px"
    >
      <div
        class="ant-breadcrumb"
        style="margin:16px 0"
      >
        <span>
          <span
            class="ant-breadcrumb-link"
          >
            Home
          </span>
          <span
            class="ant-breadcrumb-separator"
          >
            /
          </span>
        </span>
        <span>
          <span
            class="ant-breadcrumb-link"
          >
            List
          </span>
          <span
            class="ant-breadcrumb-separator"
          >
            /
          </span>
        </span>
        <span>
          <span
            class="ant-breadcrumb-link"
          >
            App
          </span>
          <span
            class="ant-breadcrumb-separator"
          >
            /
          </span>
        </span>
      </div>
      <div
        class="ant-layout-content"
        style="background:#fff;padding:24px;margin:0;min-height:280px"
      >
        Content
      </div>
    </div>
  </div>
</div>
`;
